assignment_4/assignment4-initial/src/main/zcode/parser/.antlr/ZCodeParser.py
# Generated from c://Users//takho//Desktop//Work//principles_of_programming_languages//assignment_4//assignment4-initial//src//main//zcode//parser//ZCode.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ZCodeParser ( Parser ):

    grammarFileName = "ZCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'string'", "'number'", "'dynamic'", "'var'", 
                     "'for statement'", "'break'", "'continue'", "'func'", 
                     "'begin'", "'end'", "'return'", "'if'", "'elif'", "'else'", 
                     "'for'", "'until'", "'by'", "<INVALID>", "'...'", "'bool'", 
                     "'not'", "'and'", "'or'", "'+'", "'-'", "'*'", "'/'", 
                     "'%'", "<INVALID>", "'='", "'!='", "'<'", "'>'", "'<='", 
                     "'>='", "'=='", "'<-'", "'('", "')'", "'['", "']'", 
                     "','" ]

    symbolicNames = [ "<INVALID>", "STRING_TYPE", "NUMBER_TYPE", "DYNAMIC_TYPE", 
                      "VAR_TYPE", "FOR_STATEMENT", "BREAK_STATEMENT", "CONTINUE_STATEMENT", 
                      "FUNC", "BEGIN", "END", "RETURN", "IF", "ELIF", "ELSE", 
                      "FOR", "UNTIL", "BY", "COMMENT", "STRING_OPERATOR", 
                      "BOOL_TYPE", "NOT_OPERATOR", "AND_OPERATOR", "OR_OPERATOR", 
                      "ADD_OPERATOR", "SUB_OPERATOR", "MUL_OPERATOR", "DIV_OPERATOR", 
                      "MOD_OPERATOR", "NEWLINE", "EQ_OPERATOR", "NEQ_OPERATOR", 
                      "LT_OPERATOR", "GT_OPERATOR", "LEQ_OPERATOR", "GEQ_OPERATOR", 
                      "SEQ_OPERATOR", "ASSIGN_OPERATOR", "OPEN_PARENTHESIS", 
                      "CLOSE_PARENTHESIS", "OPEN_BRACKET", "CLOSE_BRACKET", 
                      "COMMA", "BOOLEAN", "NUMBER", "IDENTIFIER", "STRING", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decllist = 1
    RULE_decl = 2
    RULE_vardecl = 3
    RULE_vardecl_only = 4
    RULE_vardecl_init = 5
    RULE_arrlist = 6
    RULE_array_expression = 7
    RULE_arrlist_expression = 8
    RULE_array_literal = 9
    RULE_array_literal_prime = 10
    RULE_expression = 11
    RULE_sign_operands = 12
    RULE_not_operands = 13
    RULE_index_operators = 14
    RULE_func_call = 15
    RULE_param_list = 16
    RULE_param_prime = 17
    RULE_param = 18
    RULE_non_rel_operators = 19
    RULE_non_str_operators = 20
    RULE_non_associative_operands = 21
    RULE_typ = 22
    RULE_literal = 23
    RULE_mul_operators = 24
    RULE_add_operators = 25
    RULE_logic_operators = 26
    RULE_rel_operators = 27
    RULE_str_operators = 28
    RULE_funcdecl = 29
    RULE_param_decl_list = 30
    RULE_param_decl_prime = 31
    RULE_param_single_decl = 32
    RULE_newline_list = 33
    RULE_body = 34
    RULE_statement_block = 35
    RULE_statement_list = 36
    RULE_statement = 37
    RULE_ret = 38
    RULE_return_statement = 39
    RULE_func_call_statement = 40
    RULE_assignment_statement = 41
    RULE_lhs = 42
    RULE_rhs = 43
    RULE_if_statement = 44
    RULE_if_body = 45
    RULE_elif_statement_list = 46
    RULE_elif_statement = 47
    RULE_else_statement = 48
    RULE_for_statement = 49
    RULE_for_body = 50
    RULE_break_statement = 51
    RULE_continue_statement = 52

    ruleNames =  [ "program", "decllist", "decl", "vardecl", "vardecl_only", 
                   "vardecl_init", "arrlist", "array_expression", "arrlist_expression", 
                   "array_literal", "array_literal_prime", "expression", 
                   "sign_operands", "not_operands", "index_operators", "func_call", 
                   "param_list", "param_prime", "param", "non_rel_operators", 
                   "non_str_operators", "non_associative_operands", "typ", 
                   "literal", "mul_operators", "add_operators", "logic_operators", 
                   "rel_operators", "str_operators", "funcdecl", "param_decl_list", 
                   "param_decl_prime", "param_single_decl", "newline_list", 
                   "body", "statement_block", "statement_list", "statement", 
                   "ret", "return_statement", "func_call_statement", "assignment_statement", 
                   "lhs", "rhs", "if_statement", "if_body", "elif_statement_list", 
                   "elif_statement", "else_statement", "for_statement", 
                   "for_body", "break_statement", "continue_statement" ]

    EOF = Token.EOF
    STRING_TYPE=1
    NUMBER_TYPE=2
    DYNAMIC_TYPE=3
    VAR_TYPE=4
    FOR_STATEMENT=5
    BREAK_STATEMENT=6
    CONTINUE_STATEMENT=7
    FUNC=8
    BEGIN=9
    END=10
    RETURN=11
    IF=12
    ELIF=13
    ELSE=14
    FOR=15
    UNTIL=16
    BY=17
    COMMENT=18
    STRING_OPERATOR=19
    BOOL_TYPE=20
    NOT_OPERATOR=21
    AND_OPERATOR=22
    OR_OPERATOR=23
    ADD_OPERATOR=24
    SUB_OPERATOR=25
    MUL_OPERATOR=26
    DIV_OPERATOR=27
    MOD_OPERATOR=28
    NEWLINE=29
    EQ_OPERATOR=30
    NEQ_OPERATOR=31
    LT_OPERATOR=32
    GT_OPERATOR=33
    LEQ_OPERATOR=34
    GEQ_OPERATOR=35
    SEQ_OPERATOR=36
    ASSIGN_OPERATOR=37
    OPEN_PARENTHESIS=38
    CLOSE_PARENTHESIS=39
    OPEN_BRACKET=40
    CLOSE_BRACKET=41
    COMMA=42
    BOOLEAN=43
    NUMBER=44
    IDENTIFIER=45
    STRING=46
    UNCLOSE_STRING=47
    ILLEGAL_ESCAPE=48
    WS=49
    ERROR_CHAR=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def newline_list(self):
            return self.getTypedRuleContext(ZCodeParser.Newline_listContext,0)


        def decllist(self):
            return self.getTypedRuleContext(ZCodeParser.DecllistContext,0)


        def EOF(self):
            return self.getToken(ZCodeParser.EOF, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_program




    def program(self):

        localctx = ZCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.newline_list()
            self.state = 107
            self.decllist()
            self.state = 108
            self.match(ZCodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(ZCodeParser.DeclContext,0)


        def decllist(self):
            return self.getTypedRuleContext(ZCodeParser.DecllistContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_decllist




    def decllist(self):

        localctx = ZCodeParser.DecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decllist)
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 110
                self.decl()
                self.state = 111
                self.decllist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(ZCodeParser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(ZCodeParser.FuncdeclContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_decl




    def decl(self):

        localctx = ZCodeParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 3, 4, 20]:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.vardecl()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.funcdecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl_only(self):
            return self.getTypedRuleContext(ZCodeParser.Vardecl_onlyContext,0)


        def vardecl_init(self):
            return self.getTypedRuleContext(ZCodeParser.Vardecl_initContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_vardecl




    def vardecl(self):

        localctx = ZCodeParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.vardecl_only()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 121
                self.vardecl_init()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_onlyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(ZCodeParser.TypContext,0)


        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def NEWLINE(self):
            return self.getToken(ZCodeParser.NEWLINE, 0)

        def newline_list(self):
            return self.getTypedRuleContext(ZCodeParser.Newline_listContext,0)


        def DYNAMIC_TYPE(self):
            return self.getToken(ZCodeParser.DYNAMIC_TYPE, 0)

        def OPEN_BRACKET(self):
            return self.getToken(ZCodeParser.OPEN_BRACKET, 0)

        def arrlist(self):
            return self.getTypedRuleContext(ZCodeParser.ArrlistContext,0)


        def CLOSE_BRACKET(self):
            return self.getToken(ZCodeParser.CLOSE_BRACKET, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_vardecl_only




    def vardecl_only(self):

        localctx = ZCodeParser.Vardecl_onlyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vardecl_only)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.typ()
                self.state = 125
                self.match(ZCodeParser.IDENTIFIER)
                self.state = 126
                self.match(ZCodeParser.NEWLINE)
                self.state = 127
                self.newline_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.match(ZCodeParser.DYNAMIC_TYPE)
                self.state = 130
                self.match(ZCodeParser.IDENTIFIER)
                self.state = 131
                self.match(ZCodeParser.NEWLINE)
                self.state = 132
                self.newline_list()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 133
                self.typ()
                self.state = 134
                self.match(ZCodeParser.IDENTIFIER)
                self.state = 135
                self.match(ZCodeParser.OPEN_BRACKET)
                self.state = 136
                self.arrlist()
                self.state = 137
                self.match(ZCodeParser.CLOSE_BRACKET)
                self.state = 138
                self.match(ZCodeParser.NEWLINE)
                self.state = 139
                self.newline_list()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vardecl_initContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR_TYPE(self):
            return self.getToken(ZCodeParser.VAR_TYPE, 0)

        def IDENTIFIER(self):
            return self.getToken(ZCodeParser.IDENTIFIER, 0)

        def ASSIGN_OPERATOR(self):
            return self.getToken(ZCodeParser.ASSIGN_OPERATOR, 0)

        def expression(self):
            return self.getTypedRuleContext(ZCodeParser.ExpressionContext,0)


        def NEWLINE(self):
            return self.getToken(ZCodeParser.NEWLINE, 0)

        def newline_list(self):
            return self.getTypedRuleContext(ZCodeParser.Newline_listContext,0)


        def typ(self):
            return self.getTypedRuleContext(ZCodeParser.TypContext,0)


        def DYNAMIC_TYPE(self):
            return self.getToken(ZCodeParser.DYNAMIC_TYPE, 0)

        def OPEN_BRACKET(self):
            return self.getToken(ZCodeParser.OPEN_BRACKET, 0)

        def arrlist(self):
            return self.getTypedRuleContext(ZCodeParser.ArrlistContext,0)


        def CLOSE_BRACKET(self):
            return self.getToken(ZCodeParser.CLOSE_BRACKET, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_vardecl_init




    def vardecl_init(self):

        localctx = ZCodeParser.Vardecl_initContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vardecl_init)
        try:
            self.state = 174
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 143
                self.match(ZCodeParser.VAR_TYPE)
                self.state = 144
                self.match(ZCodeParser.IDENTIFIER)
                self.state = 145
                self.match(ZCodeParser.ASSIGN_OPERATOR)
                self.state = 146
                self.expression(0)
                self.state = 147
                self.match(ZCodeParser.NEWLINE)
                self.state = 148
                self.newline_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 150
                self.typ()
                self.state = 151
                self.match(ZCodeParser.IDENTIFIER)
                self.state = 152
                self.match(ZCodeParser.ASSIGN_OPERATOR)
                self.state = 153
                self.expression(0)
                self.state = 154
                self.match(ZCodeParser.NEWLINE)
                self.state = 155
                self.newline_list()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 157
                self.match(ZCodeParser.DYNAMIC_TYPE)
                self.state = 158
                self.match(ZCodeParser.IDENTIFIER)
                self.state = 159
                self.match(ZCodeParser.ASSIGN_OPERATOR)
                self.state = 160
                self.expression(0)
                self.state = 161
                self.match(ZCodeParser.NEWLINE)
                self.state = 162
                self.newline_list()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 164
                self.typ()
                self.state = 165
                self.match(ZCodeParser.IDENTIFIER)
                self.state = 166
                self.match(ZCodeParser.OPEN_BRACKET)
                self.state = 167
                self.arrlist()
                self.state = 168
                self.match(ZCodeParser.CLOSE_BRACKET)
                self.state = 169
                self.match(ZCodeParser.ASSIGN_OPERATOR)
                self.state = 170
                self.expression(0)
                self.state = 171
                self.match(ZCodeParser.NEWLINE)
                self.state = 172
                self.newline_list()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(ZCodeParser.NUMBER, 0)

        def COMMA(self):
            return self.getToken(ZCodeParser.COMMA, 0)

        def arrlist(self):
            return self.getTypedRuleContext(ZCodeParser.ArrlistContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_arrlist




    def arrlist(self):

        localctx = ZCodeParser.ArrlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arrlist)
        try:
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 176
                self.match(ZCodeParser.NUMBER)
                self.state = 177
                self.match(ZCodeParser.COMMA)
                self.state = 178
                self.arrlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 179
                self.match(ZCodeParser.NUMBER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_BRACKET(self):
            return self.getToken(ZCodeParser.OPEN_BRACKET, 0)

        def arrlist(self):
            return self.getTypedRuleContext(ZCodeParser.ArrlistContext,0)


        def CLOSE_BRACKET(self):
            return self.getToken(ZCodeParser.CLOSE_BRACKET, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_array_expression




    def array_expression(self):

        localctx = ZCodeParser.Array_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_array_expression)
        try:
            self.state = 187
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [40]:
                self.enterOuterAlt(localctx, 1)
                self.state = 182
                self.match(ZCodeParser.OPEN_BRACKET)
                self.state = 183
                self.arrlist()
                self.state = 184
                self.match(ZCodeParser.CLOSE_BRACKET)
                pass
            elif token in [44]:
                self.enterOuterAlt(localctx, 2)
                self.state = 186
                self.arrlist()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arrlist_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_BRACKET(self):
            return self.getToken(ZCodeParser.OPEN_BRACKET, 0)

        def array_expression(self):
            return self.getTypedRuleContext(ZCodeParser.Array_expressionContext,0)


        def COMMA(self):
            return self.getToken(ZCodeParser.COMMA, 0)

        def arrlist_expression(self):
            return self.getTypedRuleContext(ZCodeParser.Arrlist_expressionContext,0)


        def CLOSE_BRACKET(self):
            return self.getToken(ZCodeParser.CLOSE_BRACKET, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_arrlist_expression




    def arrlist_expression(self):

        localctx = ZCodeParser.Arrlist_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_arrlist_expression)
        try:
            self.state = 196
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 189
                self.match(ZCodeParser.OPEN_BRACKET)
                self.state = 190
                self.array_expression()
                self.state = 191
                self.match(ZCodeParser.COMMA)
                self.state = 192
                self.arrlist_expression()
                self.state = 193
                self.match(ZCodeParser.CLOSE_BRACKET)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 195
                self.array_expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_literalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN_BRACKET(self):
            return self.getToken(ZCodeParser.OPEN_BRACKET, 0)
